syntax = "proto3";

package greet;

option go_package="gitlab.com\\tleuzhan13\\grpc-go-course\\greet\\greetpb;greetpb";

message PrimeRequest {
  int32 number = 1;
}

message PrimeResponse {
  int32 number = 1;
}

message AverageRequest {
  int32 number = 1;
}

message AverageResponse {
  double number = 1;
}

service CalculatorService{
  rpc PrimeNumberDecomposition(PrimeRequest) returns (stream PrimeResponse) {};

  rpc ComputeAverage(stream AverageRequest) returns (AverageResponse) {};
}